src/test/deca/context/invalid/created/if.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 6 : If condition must be a boolean expression

{
    if(3.7) {
        println(23);
    }
}